tests/ok/scalar-payload-unions.ari
fn main() -> i64 {
  let pair = (3, 4);
  var cells = [1, 2, 3];
  let exact = 1.5f64 + 2.0f64 == 3.5f64;
  let ready = true;

  cells[1] = 5;

  if ready && exact {
    pair.0 + pair.1 + cells[1] + 9
  } else {
    0
  }
}
