tests/errors/array-literal-index-out-of-range.ari
fn main() -> i64 {
  [1, 2][2]
}
